--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1359,6 +1359,13 @@ button:hover {
     grid-template-columns: 1fr 1fr;
     gap: 40px;
   }
+  .wrapper {
+    text-align: center; /* Center the content horizontally */
+}
+
+.btn {
+    display: inline-block; /* Make the button inline-block to center it */
+}
 
   .hero .wrapper { flex-wrap: nowrap; }
 
